--- a/package.json.sample
+++ b/package.json.sample
@@ -30,8 +30,9 @@
     "parser": "babel-eslint"
   },
   "scripts": {
-    "preinstall": "npm install -g gulp gulp-shell babel browserify watchify",
+    "preinstall": "npm install -g gulp gulp-shell babel babel-eslint browserify watchify",
     "watch": "gulp watch",
+    "clean:git" "find . -type d -name .git -print0 | xargs -0 rm -fr",
     "start": "NODE_ENV=development NODE_PATH=gulp"
   },
   "preferGlobal": true,
