:が抜けていたため追加

--- a/package.json.sample
+++ b/package.json.sample
@@ -32,7 +32,7 @@
   "scripts": {
     "preinstall": "npm install -g gulp gulp-shell babel babel-eslint browserify watchify",
     "watch": "gulp watch",
-    "clean:git" "find . -type d -name .git -print0 | xargs -0 rm -fr",
+    "clean:git": "find . -type d -name .git -print0 | xargs -0 rm -fr",
     "start": "NODE_ENV=development NODE_PATH=gulp"
   },
   "preferGlobal": true,
