--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "scripts": {
     "preinstall": "npm install -g gulp gulp-shell babel babel-eslint browserify watchify",
+    "start": "NODE_ENV=development NODE_PATH=gulp",
+    "setup": "mkdir ./{js,dist,css,docs,img}; touch index.html",
+
     "watch": "gulp watch",
-    "clean:git": "find . -type d -name .git -print0 | xargs -0 rm -fr",
-    "start": "NODE_ENV=development NODE_PATH=gulp"
+    "clean:git": "find . -type d -name .git -print0 | xargs -0 rm -fr"
   },
   "preferGlobal": true,
   "author": "kobabasu",
