--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "//github.com/kobabasu/micro-gulp.git"
   },
+
   "keywords": [
     "gulp",
     "gulp-shell",
@@ -17,26 +18,50 @@
     "linux",
     "!win32"
   ],
+
   "dependencies": {
   },
   "devDependencies": {
     "gulp": "*",
-    "run-sequence": "*"
+    "run-sequence": "*",
+
+    "react": "*",
+    "react-router": "1.0.0-beta3",
+    "react-document-title": "*",
+    "object-assign": "*",
+    "flux": "*"
   },
+
   "browser": {
   },
   "browserify": [ "js", "jsx" ],
   "eslintConfig": {
     "parser": "babel-eslint"
   },
+
   "scripts": {
-    "preinstall": "npm install -g gulp gulp-shell babel babel-eslint browserify watchify",
-    "start": "NODE_ENV=development NODE_PATH=gulp",
     "setup": "mkdir ./{js,dist,css,docs,img}; touch index.html",
+    "preinstall": "npm run setup; npm install -g gulp gulp-shell babel babel-eslint browserify watchify",
+    "start": "NODE_ENV=development NODE_PATH=gulp",
+
+    "babel": "babel ./src --out-dir ./js",
+    "browserify": "browserify -d --compact false ./js/app.js > ./dist/build.js",
+    "build:src": "npm run babel; npm run browserify",
+
+    "sass": "sass --no-cache --sourcemap=file ./sass/style.sass:./css/style.css",
+    "watch:sass": "sass --no-cache --sourcemap=file -w ./sass/style.sass:./css/style.css",
+    "doc:sass": "styledocco -n 'micro-sass' -o ./docs/sass --preprocessor 'sass' ./sass/*.sass ./sass/*.scss ./sass/**/*.sass",
+    "doc:pages": "styledocco -n 'pages' -o ./docs/pages --preprocessor 'sass' ./sass/pages/*.sass ./sass/pages/**/*.sass",
+    "doc:layouts": "styledocco -n 'layouts' -o ./docs/layouts --preprocessor 'sass' ./sass/layouts/*.sass ./sass/layouts/**/*.sass",
+    "build:sass": "npm run sass; npm run doc:sass",
+
+    "clean:git": "find . -type d -name .git -print0 | xargs -0 rm -fr",
 
     "watch": "gulp watch",
-    "clean:git": "find . -type d -name .git -print0 | xargs -0 rm -fr"
+    "watch:sass": "gulp watch:sass",
+    "build": "gulp build"
   },
+
   "preferGlobal": true,
   "author": "kobabasu",
   "license": "MIT"
