--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 
   "scripts": {
     "setup": "mkdir ./{js,dist,css,docs,img}; touch index.html",
-    "preinstall": "npm run setup; npm install -g gulp gulp-shell babel babel-eslint browserify watchify",
+    "preinstall": "npm run setup; npm install -g gulp gulp-shell babel babel-eslint browserify watchify bower styledocco",
     "start": "NODE_ENV=development NODE_PATH=gulp",
 
     "babel": "babel ./src --out-dir ./js",
