--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 
     "babel": "babel ./src --out-dir ./js",
     "browserify": "browserify -d --compact false ./js/app.js > ./dist/build.js",
+    "watch:src": "gulp watch:src",
     "build:src": "npm run babel; npm run browserify",
 
     "sass": "sass --no-cache --sourcemap=file ./sass/style.sass:./css/style.css",
@@ -53,12 +54,11 @@
     "doc:sass": "styledocco -n 'micro-sass' -o ./docs/sass --preprocessor 'sass' ./sass/*.sass ./sass/*.scss ./sass/**/*.sass",
     "doc:pages": "styledocco -n 'pages' -o ./docs/pages --preprocessor 'sass' ./sass/pages/*.sass ./sass/pages/**/*.sass",
     "doc:layouts": "styledocco -n 'layouts' -o ./docs/layouts --preprocessor 'sass' ./sass/layouts/*.sass ./sass/layouts/**/*.sass",
-    "build:sass": "npm run sass; npm run doc:sass",
+    "build:sass": "npm run sass; npm run doc:sass; npm run doc:pages; npm run doc:layouts",
 
     "clean:git": "find . -type d -name .git -print0 | xargs -0 rm -fr",
 
     "watch": "gulp watch",
-    "watch:sass": "gulp watch:sass",
     "build": "gulp build"
   },
 
