--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "watch:src": "gulp watch:src",
     "build:src": "npm run babel; npm run browserify",
 
-    "sass": "sass --no-cache --sourcemap=file ./sass/style.sass:./css/style.css",
-    "watch:sass": "sass --no-cache --sourcemap=file -w ./sass/style.sass:./css/style.css",
+    "sass": "sassc -M ./sass/style.sass > ./css/style.css -m ./css/style.css",
+    "sass:min": "sassc -t compressed -M ./sass/style.sass > ./css/style.min.css -m ./css/style.min.css",
     "doc:sass": "styledocco -n 'micro-sass' -o ./docs/sass --preprocessor 'sass' ./sass/*.sass ./sass/*.scss ./sass/**/*.sass",
     "doc:pages": "styledocco -n 'pages' -o ./docs/pages --preprocessor 'sass' ./sass/pages/*.sass ./sass/pages/**/*.sass",
     "doc:layouts": "styledocco -n 'layouts' -o ./docs/layouts --preprocessor 'sass' ./sass/layouts/*.sass ./sass/layouts/**/*.sass",
