babel-preset-envを利用するよう変更

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
 
   "dependencies": {},
   "devDependencies": {
-    "gulp": "gulpjs/gulp.git#4.0",
     "babel-core": "*",
-    "babel-preset-es2015": "*",
-    "babel-preset-react": "*"
+    "babel-preset-env": "*",
+    "babel-plugin-istanbul": "*",
+
+    "gulp": "gulpjs/gulp#4.0"
   },
 
   "scripts": {
