--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-  "presets": [ "es2015", "react" ],
+  "presets": [
+    [ "env", {
+      "targets": {
+        "node": "current"
+      }
+    } ]
+  ],
+  "plugins": [ "istanbul" ],
   "compact": false
 }
